--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-docx==0.8.11
 pytz==2021.3
-pywin32==304
+pywin32
 pywinpty==2.0.8
 PyYAML==5.4.1
 pyzmq==24.0.1
