--- a/requirements.txt
+++ b/requirements.txt
@@ -100,6 +100,7 @@ tornado==6.2
 traitlets==5.4.0
 trio==0.19.0
 trio-websocket==0.9.2
+turtle==0.0.1
 urllib3==1.26.7
 virtualenv==20.15.1
 virtualenv-clone==0.5.7
