--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ botocore>=1.25
 cement>=2.0
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.9
 colorama==0.4.3
 cryptography==36.0.1
 distlib==0.3.4
@@ -23,7 +22,6 @@ future==0.16.0
 h11==0.12.0
 idna==3.3
 jmespath==0.10.0
-json5==0.9.10
 lxml==4.7.1
 mysql-connector-python==8.0.29
 openpyxl==3.0.9
@@ -38,15 +36,11 @@ python-dateutil==2.8.2
 python-docx==0.8.11
 pytz==2021.3
 PyYAML>=3.0
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
 requests==2.26.0
 s3transfer==0.6.0
 semantic-version==2.8.5
 six>=1.0.0
 sniffio==1.2.0
-s3transfer==0.6.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
 sqlparse==0.4.2
@@ -56,5 +50,7 @@ trio-websocket==0.9.2
 urllib3==1.26.7
 virtualenv==20.15.1
 virtualenv-clone==0.5.7
+wcwidth==0.1.9
+wsproto==1.0.0
 xlwt==1.3.0
 gunicorn==20.1.0
