--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pipenv==2022.6.7
 platformdirs==2.5.2
 pycparser==2.21
 pyOpenSSL==21.0.0
+psycopg2==2.9.3
 python-dateutil==2.8.2
 python-docx==0.8.11
 pytz==2021.3
